# zephyrus-public

./: .gitignore  README.md  requirements.txt  setup.cfg
eumetsat/: download.py  satpy-test.py
scripts/: point_reg_runner.py  runner.py
src/zephyrus/data_pipelines/: pipeline.py  tile_utils.py  utils.py
src/zephyrus/data_pipelines/parsers/: MetOffice.py  Parser.py  PointDataPQT.py
src/zephyrus/models/: layers.py  loss.py  model_v2.py  util.py
src/zephyrus/point_reg/: auto_reg.py  model.py
src/zephyrus/trees/: scikit_tree.py  tf_ds_test.py
src/zephyrus/utils/: hyperparameters.py  runner.py  standard_logger.py  translator.py  video_summary.py
