[metadata]
name = zephyrus
version = 0.0.1-alpha
description = AI
author = Tim Cargan
Licence = None
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    zephyrus
install_requires =
    numpy~=1.21.0
    tensorflow~=2.7.0
    pandas~=1.2.4
    requests~=2.25.1
    setuptools~=57.1.0
    tensorflow_io
    tensorflow_decision_forests
    keras-tuner
    pandas
    scikitlearn
    pyarrow
python_requires = >=3.7
package_dir =
    =src
zip_safe = no